# portal-rf-automation

./: Dockerfile  Pipfile  install_chrome_driver.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml
keywords/: credentialmodallaunch_keywords.robot
pageobjects/: locators.py
portal_api/: config.py
portal_api/test/: conftest.py
portal_ui/keywords/: assetcomparator_keywords.robot  credentialmodalauto-manuallaunch_keywords.robot  credentialmodaldeletecredential_keywords.robot  credentialmodalinvalidlogin_keywords.robot  credentialmodallaunch_keywords.robot  credentialmodalloginBDD_keywords.robot  credentialmodallogin_keywords.robot  customerwallet_keywords.robot  general_keywords.robot  midmanagement_keywords.robot  midmanagmentmerchant_keywords.robot  midmanagmentmerchants_PSIMIs_keywords.robot  midmanagmentmerchants_locations_keywords.robot  midmanagmentmerchants_mids_keywords.robot  midmanagmentmerchants_secondarymids_keywords.robot  planmenu_keywords.robot
portal_ui/pageobjects/: aperturelogin_locators.py  assetcomparator_locators.py  customerwallet_locators.py  locators.py  midmanagement_locators.py  midmanagment_merchant_PSIMIs_locators.py  midmanagment_merchant_Secondarymids_locators.py  midmanagment_merchant_locations_locators.py  midmanagment_merchant_locators.py  midmanagment_merchant_mids_locators.py
portal_ui/results/: log.html  output.xml  report.html
portal_ui/test/: assetcomparator.robot
portal_ui/testcases/: credentialmodalauto-manuallaunch.robot  credentialmodalinvalidlogin.robot  (+15 more)
resources/: credentialmodallaunch_keywords.robot
results/: log.html  output.xml  report.html
testcases/: credentialmodallaunch.robot
(+8 files in other folders)
