[tool.poetry]
name = "portal-rf-automation"
version = "0.1.0"
description = ""
authors = ["Thenuja Viknarajah <thenuja_1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
selenium = "^4.9.1"
robotframework = "^6.0.2"
robotframework-pythonlibcore = "^4.1.2"
robotframework-seleniumlibrary = "^6.1.0"
robotframework-faker = "^5.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = {version = "^6.0.0", source = "pypi-simple"}


[[tool.poetry.source]]
name = "bink-pypi"
url = "https://pypi.gb.bink.com/simple"
default = false
secondary = false


[[tool.poetry.source]]
name = "pypi-simple"
url = "https://pypi.org/simple"
default = true
secondary = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
